# idotmatrix-client

./: .gitignore  CLAUDE.md  PLAN.md  README.md  RELEASING.md  RUST_PORT_PLAN.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-cli.yml  release.yml
rust-cli/: CLAUDE.md  Cargo.toml
rust-cli/src/: main.rs  output.rs
rust-cli/src/cli/: mod.rs
rust-cli/src/imaging/: mod.rs  resize.rs
rust-cli/src/protocol/: constants.rs  mod.rs  types.rs
rust-cli/src/protocol/commands/: chronograph.rs  clock.rs  common.rs  countdown.rs  effect.rs  fullscreen_color.rs  gif.rs  graffiti.rs  image.rs  mod.rs  scoreboard.rs  text.rs
rust-cli/src/transport/: ble.rs  mod.rs
scripts/: build-sidecar.sh
src/: App.tsx  CLAUDE.md  index.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/cli/: index.ts
src/cli/commands/: carousel.ts  chronograph.ts  clock.ts  color.ts  countdown.ts  gif.ts  image.ts  pixel.ts  reset.ts  scan.ts  scoreboard.ts  (+1 more)
src/hooks/: useDevice.ts  useSidecar.ts
src/imaging/: gif.ts  png.ts  resize.ts
src/lib/: constants.ts  sidecar.ts  types.ts
src/protocol/: constants.ts  types.ts
src/transport/: mock-transport.ts  noble-transport.ts  types.ts
src/utils/: crc32.ts  logger.ts
tests/protocol/: chronograph.test.ts  clock.test.ts  common.test.ts  countdown.test.ts  effect.test.ts  fullscreen-color.test.ts  gif.test.ts  graffiti.test.ts  image.test.ts  scoreboard.test.ts  text.test.ts
(+37 files in other folders)
