[package]
name = "idm"
version = "0.1.0"
edition = "2021"
description = "CLI client for iDotMatrix LED displays over BLE"

[[bin]]
name = "idm"
path = "src/main.rs"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
image = { version = "0.25", features = ["gif", "png", "jpeg"] }
clap = { version = "4", features = ["derive", "env"] }
crc32fast = "1"
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4"
env_logger = "0.11"
uuid = "1"
futures = "0.3"
chrono = "0.4"
ab_glyph = "0.2"
color_quant = "1"
gif = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
